crates/reinhardt-pages/tests/ui/form/fail/control_entry_rejects_generic.rs
use reinhardt_pages::form;

fn main() {
	let _form = form! {
		name: InvalidControlGenericForm,
		action: "/invalid",
		fields: {
			reset: ResetButton<String> {
				label: "Reset",
			}
		}
	};
}
